# a-stock-v2

./: .gitignore  CLAUDE.md  README.md  STARTUP_README.md  agent_notes_supplement_2026-03-25.md  pyproject.toml  run_codex_task.sh
config/: default.toml  tickers.json  universe.csv
data/cache/daily_bars/: 0_000020.json  0_000333.json  0_000426.json  0_000547.json  0_000592.json  0_000617.json  0_000858.json  0_000938.json  0_000968.json  0_000978.json  0_000988.json  0_002015.json  0_002050.json  0_002192.json  0_002202.json  0_002240.json  0_002310.json  0_002384.json  0_002418.json  0_002428.json  0_002460.json  0_002463.json  0_002549.json  (+87 more)
scripts/: fetch_akshare_supplemental.py  fetch_capitalfarmer_supplemental.py  fetch_qstock_supplemental.py  run_daily.sh  run_post_close.sh  run_realtime_session.sh  run_trading_day.sh  serve_api.sh  serve_dashboard.sh  setup_cron.sh
src/ashare_harness_v2/: __init__.py  _delegate_smoke.py  cli.py  codex_delegate.py  codex_monitor.py  config.py  decision_core.py  models.py  utils.py
src/watchdog/: __init__.py  _cache.py  ask_stock.py  cli.py  daily_brief.py  find_hotspots.py  gate.py  truth.py  vix.py
tests/: conftest.py  test_advice_api.py  test_advice_harness.py  test_decision_bundle.py  test_decision_core.py  test_delegate_smoke.py  test_dynamic_universe_skill.py  test_find_hotspots.py  test_fixed_pool_eval.py  test_gate.py  test_holdings.py  test_homepage_runtime.py  test_market_data.py  test_prediction_eval.py  test_realtime_and_review.py  test_supplemental_bridge.py  test_trading_reports.py  test_truth.py  test_vix.py
(+860 files in other folders)
