[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-phase1-agents-v2"
version = "0.2.0"
description = "Harness-first A-share research, monitoring, replay, and evaluation system."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
market_enhancers = [
  "qstock==1.3.8",
  "jqfactor-analyzer==1.1.0",
]

[project.scripts]
ashare-v2 = "ashare_harness_v2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
