[project]
name = "ashare-watchdog"
version = "0.1.0"
description = "A-share daily watchdog: VIX rotation + hotspots + truth gate"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
watchdog = "watchdog.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
